# pinax

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  pinax.desktop
.github/workflows/: ci.yml
docs/: config.md
src/: config.rs  geometry.rs  main.rs  renderer.rs  text_box.rs  window.rs
src/wayland/: mod.rs
