[package]
name = "pinax"
version = "1.1.0"
description = "Wayland mobile notepad"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/pinax"
rust-version = "1.88.0"
license = "GPL-3.0"
edition = "2024"

[dependencies]
calloop = "0.14.2"
calloop-notify = "0.2.0"
calloop-wayland-source = "0.4.0"
configory = { version = "0.5.1", features = ["docgen", "log"] }
dirs = "6.0.0"
glutin = { version = "0.32.3", default-features = false, features = ["egl", "wayland"] }
raw-window-handle = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }
skia-safe = { version = "0.87.0", features = ["all-linux", "textlayout"] }
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = ["xkbcommon"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wayland-backend = { version = "0.3.10", features = ["client_system"] }

[build-dependencies]
gl_generator = "0.14.0"
